# kamino-protocol-sdk

./: Cargo.toml  README.md
rust-client/: Cargo.toml
rust-client/src/: fee_estimation.rs  lib.rs  main.rs  rpc.rs  utils.rs
rust-client/src/instructions/: borrow.rs  deposit.rs  init.rs  liquidate.rs  mod.rs  redeem.rs  refresh.rs  repay.rs  withdraw.rs
ts-client/src/idl_codegen/instructions/: depositReserveLiquidityAndObligationCollateralV2.ts
