[package]
name = "klend-client"
version = "0.1.0"
edition = "2021"

[dependencies]
anchor-lang = "0.29.0"
anchor-spl = "0.29.0"
anchor-client = "0.29.0"
clap = { version = "3.2.25", features = ["derive", "env"] }
solana-program = "=1.17.20"
solana-rpc-client = "=1.17.20"
solana-sdk = "=1.17.20"
solana-account-decoder = "=1.17.20"
solana-client = "=1.17.20"
solana-transaction-status = "=1.17.20"
spl-associated-token-account = "1.1.3"
anyhow = "1.0.57"
spl-token = "3.5.0"
bincode = "1.3.3"
serde = { version = "1.0.137", features = ["derive"] }
serde_json = "1.0.102"
mpl-token-metadata = "3.2.3"
klend = { path = "../programs/klend", package = "kamino_lending", features = ["no-entrypoint"] }
regex = "1"
