[package]
name = "klend-client"
version = "0.1.0"
edition = "2021"

[dependencies]
anchor-lang.workspace = true
anchor-spl.workspace = true
anchor-client.workspace = true
clap = { version = "3.2.25", features = ["derive", "env"] }
solana-program.workspace = true
solana-rpc-client.workspace = true
solana-sdk.workspace = true
solana-account-decoder.workspace = true
solana-client.workspace = true
solana-transaction-status.workspace = true
spl-associated-token-account.workspace = true
anyhow = "1.0.57"
spl-token.workspace = true
bincode = "1.3.3"
serde.workspace = true
serde_json.workspace = true
mpl-token-metadata = "3.2.3"
klend = { path = "../programs/klend", package = "kamino_lending", features = ["no-entrypoint"] }
regex = "1"
